# warden

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  justfile
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  cd.yml
src/: app.rs  handlers.rs  lib.rs  main.rs  service.rs  settings.rs  telemetry.rs
src/service/: handlers.rs
