[package]
name = "warden"
version = "0.1.0"
edition = "2021"
description = """
Web-service for automating your build, test and deployment processes.
"""
repository = "https://github.com/dark-fusion/warden"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "warden"
path = "src/main.rs"

[dependencies]
axum = { version = "0.5", features = ["headers", "http2"] }
config = { version = "0.13", default-features = false, features = ["json"] }
hyper = { version = "1.0", features = ["runtime", "server"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[profile.dev]
debug = 0 # Faster compile times during development

[profile.release]
codegen-units = 1
lto = true

[features]
